# vaultsfyi-cli

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
agent/: agent.py  decision.py
agent/api/: client.py  opportunities.py  positions.py  query.py  transactions.py  v2.py
agent/cli/: __init__.py  api.py  config.py  context.py  main.py  output.py
agent/cli/commands/: __init__.py
agent/core/: executor.py  wallet.py
agent/strategy/: criteria.py
docs/: README.md  commands.md  decisions.md  human-usage.md  multi-agent.md  openclaw.md  preferences.md  safety.md  single-agent.md
helpers/: create_ows_wallet.py  show_wallet_address.py
skills/openclaw-vaultsfyi-cli/: SKILL.md
skills/openclaw-vaultsfyi-cli/agents/: openai.yaml
skills/openclaw-vaultsfyi-cli/references/: cli-playbook.md
tests/: test_api_behavior.py  test_api_cli.py  test_cli.py  test_cli_command_coverage.py  test_decision_math.py  test_e2e_cli_live.py  test_python_api.py
