[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultsfyi-cli"
version = "0.1.0"
description = "Command-line DeFi vault manager powered by vaults.fyi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wallfacer Labs" }]
dependencies = [
  "web3>=6.0.0",
  "eth-account>=0.8.0",
  "open-wallet-standard>=1.3.2",
  "requests>=2.25.0",
  "python-dotenv>=0.19.0",
  "pyyaml>=6.0",
  "tabulate>=0.9.0",
  "typer>=0.12.0",
  "tomli-w>=1.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
vaultsfyi = "agent.cli.main:app"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: live CLI/API tests that require VAULTS_API_KEY, network access, and explicit opt-in",
]
